--- a/assets/scss/common/_tease-post-rectangle.scss
+++ b/assets/scss/common/_tease-post-rectangle.scss
@@ -5,7 +5,7 @@
 		margin-bottom: -70px;
     margin-top: 40px;
     display: block;
-    transition: 0.2s ease-in-out;
+    transition: .6s $ease;
 	}
 	.titleblock {
 		position: absolute;
