--- a/assets/scss/modules/_accordion.scss
+++ b/assets/scss/modules/_accordion.scss
@@ -45,10 +45,10 @@
 				font-weight: 600;
 				margin: 0 0 0 -10px;
 				color: #fff;
-				transition: 0.2s ease-in;
+				transition: 0.3s $ease;
 			}
 			i {
-				transition: 0.2s ease-in;
+				transition: 0.3s $ease;
 				line-height: 40px;
 				right: 20px;
 				left: auto;
