--- a/templates/tease-klanten.twig
+++ b/templates/tease-klanten.twig
@@ -1,4 +1,4 @@
-<a href="{{ item.gekoppeld_project.url }}" class="tease tease-klanten noline {% if loop.index is odd %} odd {% endif %}">
+<a href="{{ item.gekoppeld_project.url }}" target="_blank" class="tease tease-klanten noline {% if loop.index is odd %} odd {% endif %}">
 	<div class="text-center">
 		<img src="{{ item.thumbnail.src }}" alt="{{ item.thumbnail.alt }}">
 	</div>
