--- a/assets/scss/common/_base.scss
+++ b/assets/scss/common/_base.scss
@@ -146,7 +146,7 @@ ol + h2, ol + h3, ol + h4, ol + h5 {
 }
 a:not(.btn) {
   color: $blue;
-  transition: 0.15s ease-in;
+  transition: 0.2s $ease;
   position: relative;	  
   &:not(.noline):after {
     position: absolute;
@@ -156,7 +156,7 @@ a:not(.btn) {
     height: 2px;
     background: $blue;
     width: 0%;
-    transition: 0.15s ease-in-out;
+    transition: 1s $ease;
   }
   &:hover {
     color: $blue;
