--- a/assets/scss/common/_buttons.scss
+++ b/assets/scss/common/_buttons.scss
@@ -7,7 +7,7 @@ body .nf-form-content input[type=submit] {
   border-radius: 10px 0 10px 0;
   padding: 0 22px;
   font-weight: 600;
-  transition: 0.15s ease-in-out;
+  transition: 1s $ease;
   position: relative;
   overflow: hidden;
   background-repeat: no-repeat;
@@ -60,6 +60,16 @@ body .nf-form-content input[type=submit] {
 		color: $blue;
 		text-decoration: none;
 	}
+}
+
+.btn-tag {
+	background: $grey;
+	color: #fff;
+	height: 20px;
+	line-height: 20px;
+	padding: 0 15px;
+	font-size: 14px;
+	text-transform: uppercase;
 }
 
 .btn-light:not(:disabled):not(.disabled) {
@@ -129,7 +139,7 @@ body .nf-form-content input[type=submit] {
     height: 2px;
     background: $blue;
     width: 0%;
-    transition: 0.15s ease-in-out;
+    transition: 1s $ease;
   }
   &:hover {
     color: $blue;
