--- a/assets/scss/common/_cards.scss
+++ b/assets/scss/common/_cards.scss
@@ -13,8 +13,8 @@ a.card[href] {
 	&:hover {
 		text-decoration: none;
 		.card-img-top {
-			transition: all 0.2s;
-		  -webkit-transform: scale(1.1);
+			transition: all 6s $ease;
+		  -webkit-transform: scale(1.2);
 		}
 		h5 {
 			color: $blue;
@@ -29,7 +29,7 @@ a.card[href] {
 	  bottom: 0;
 	  z-index: 1;
 	  opacity: 0;
-	  transition: 0.2s ease-in-out;
+	  transition: 1s $ease;
 	  background-image: linear-gradient(45deg, rgba(255,0,0,0.50) 0%, #007BFB 100%);
 		background-image: linear-gradient(225deg, #00ACFF 0%, #000000 100%);
   }
@@ -46,7 +46,7 @@ a.card[href] {
   border: 0;
   overflow: hidden;
   margin-bottom: 30px;
-  transition: 0.2s ease-in;
+  transition: 1s $ease;
   background: transparent;
   &.fullheight {
   		height: calc(100% - 30px);
@@ -85,7 +85,7 @@ a.card[href] {
     position: absolute;
 	  background-size: cover;
 	  background-position: center center;
-	  transition: all 0.2s;
+	  transition: 1s $ease;
 	  -webkit-transform: scale(1.01);
 	  border-radius: 0;
   }
