--- a/assets/scss/gutenberg/_accordion.scss
+++ b/assets/scss/gutenberg/_accordion.scss
@@ -10,7 +10,7 @@
 	    padding: 10px;
 			h5 {
 				color: $darkblue;
-				transition: 0.15s ease-in;
+				transition: 0.5s $ease;
 				margin: 0;
 			}
 			i {
@@ -27,7 +27,7 @@
 				}
 				i {
 					color: $blue;
-					transition: 0.15s ease-in;
+					transition: 0.5s $ease;
 				}
 				&:after {
 					display: none;
