--- a/assets/scss/modules/_biglink.scss
+++ b/assets/scss/modules/_biglink.scss
@@ -26,7 +26,7 @@ section.mod-biglink {
 			right: 0;
 			bottom: 0;
 			z-index: -1;
-			transition: 0.6s ease-in-out;
+			transition: 0.8s $ease;
 		}
 	  .bg2 {
 			position: absolute;
