--- a/assets/scss/modules/_blog.scss
+++ b/assets/scss/modules/_blog.scss
@@ -13,11 +13,11 @@
 	}
 	.slick-slide {
 		.rectangle {
-			transition: transform 0.6s ease-in-out;
+			transition: transform 1s $ease;
 			transform: scale(0.9);
 		}
 		.summary {
-			transition: transform 0.6s ease-in-out;
+			transition: transform 1s $ease;
 			transform: translateY(60px);
 		}
 		&.slick-current {
