--- a/assets/scss/common/_balloon.scss
+++ b/assets/scss/common/_balloon.scss
@@ -1,8 +1,9 @@
 .balloon {
-  padding: 50px 30px;
-  border-radius: 40px 0 40px 0;
-  position: relative;
-  &:after {
+	padding: 50px 30px;
+	border-radius: 40px 0 40px 0;
+	position: relative;
+
+	&:after {
 		content: '';
 		position: absolute;
 		bottom: 0;
@@ -11,6 +12,7 @@
 		height: 30px;
 		background: #fff;
 	}
+
 	&:before {
 		content: '';
 		position: absolute;
@@ -20,11 +22,13 @@
 		height: 30px;
 		background: #fff;
 	}
+
 	.corner {
-		position:absolute;
+		position: absolute;
 		bottom: 30px;
 		right: 0;
 	}
+
 	.arrow {
 		position: absolute;
 		bottom: 0;
@@ -34,5 +38,32 @@
 		border-style: solid;
 		border-width: 0 0 30px 60px;
 		border-color: transparent transparent #ffffff transparent;
+	}
+}
+
+.text-white {
+	.balloon {
+
+		&:after,
+		&:before {
+			content: '';
+			position: absolute;
+			bottom: 0;
+			right: 0;
+			width: calc(50% - 30px);
+			height: 30px;
+			background: $darkgrey;
+		}
+
+		.arrow {
+			position: absolute;
+			bottom: 0;
+			left: calc(50% - 30px);
+			width: 0;
+			height: 0;
+			border-style: solid;
+			border-width: 0 0 30px 60px;
+			border-color: transparent transparent $darkgrey transparent;
+		}
 	}
 }
