--- a/assets/scss/modules/_pageheader.scss
+++ b/assets/scss/modules/_pageheader.scss
@@ -59,7 +59,7 @@
 
 .mod-pageheader {
   opacity: 1;
-  overflow: visible;
+  overflow: hidden;
   padding: 50px 0 30px;
   height: 380px;
   opacity: 0;
