--- a/templates/archive-pro_fonts.twig
+++ b/templates/archive-pro_fonts.twig
@@ -19,17 +19,17 @@
 			  </div>
 			</div>
 			{% if options.fonts_tekst %}
-			  <div class="row">
-				  <div class="col-lg-2" data-aos="fade-right" data-aos-duration="800">
-					  {% if options.fonts_link %}
-						<a class="btn-link d-none d-lg-inline-block" target="{{ options.fonts_link.target }}" href="{{ options.fonts_link.url }}">
+				<div class="row">
+					<div class="col-lg-2" data-aos="fade-right" data-aos-duration="800">
+						{% if options.fonts_link %}
+							<a class="btn-link d-none d-lg-inline-block" target="{{ options.fonts_link.target }}" href="{{ options.fonts_link.url }}">
 								{{ options.fonts_link.title }} 
 								{{ check }}
 							</a>
 						{% endif %}
-				  </div>
+					</div>
 					<div class="col-md-10 col-lg-8" data-aos="fade-in" data-aos-duration="800">
-					{{ options.fonts_tekst }}
+						{{ options.fonts_tekst }}
 					</div>
 				</div>
 			{% endif %}
@@ -45,42 +45,29 @@
 		<section class="mod-filterblocks d-none d-md-block bg-white">
 			<div class="container">
 				<div class="menubar">
-					<div class="row">
-						<div class="col-md-auto">
-							<a href="{{ posttype_link }}" class="{% if current_category == '' %} active {% endif %}"><h3>{{ options.alle }} <i class="fas fa-chevron-down"></i></h3></a>
-						</div>
-						<div class="col-md">
-							<div class="topcats">
+					<div class="fontcats">
+						<div class="row">
+							<div class="col-md-auto">
+								<a href="{{ posttype_link }}" class="{% if current_category == '' %} active {% endif %}"><h3>{{ options.alle }} </h3></a>
+							</div>
+							<div class="col-md">
 								<div class="row">
 									{% for item in categories %}
-
-											<div class="col-md-auto">
-												<a href="{{ item.link }}" class="{% if item.id == current_category %} active {% endif %}"><h3>{{ item.title }} <i class="fas fa-chevron-down"></i></h3></a>
-												<div class="set">
-													{% set parentid = item.id %}
-													{% for item in child_categories %}
-														{% if parentid == item.parent %}
-															<div><a href="{{ item.link }}" class="{% if item.id == current_category %} active {% endif %}">{{ item.title }}</a></div>
-														{% endif %}
-													{% endfor %}
-												</div>
-											</div>
-	
+										<div class="col-md-auto">
+											<a href="{{ item.link }}" class="{% if item.id == current_category %} active {% endif %}"><h3>{{ item.title }} </h3></a>
+										</div>
 									{% endfor %}
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-				{% if current_category != '' %}
-					<a href="{{ site.url }}/fonts" class="btn btn-tag"> {{ title }} <span style="margin-left: 10px"><i class="fas fa-times"></i></span></a>
-				{% endif %}
 			</div>
 		</section>
 	{% endif %}
-  <section class="bg-white">
+	<section class="bg-white">
 		<div class="container">
-	  <div class="cards cards-archive">
+	    	<div class="cards cards-archive">
 				<div class="row">
 					{% set delay = '0' %}
 					{% for item in posts %}  
@@ -90,7 +77,7 @@
 						{% set delay = delay + '0' %}
 					{% endfor %}
 				</div>
-	  </div>
-	</div>
-  </section>
+			</div>
+		</div>
+	</section>
 {% endblock %}
