--- a/templates/pagebuilder/foto-gallery.twig
+++ b/templates/pagebuilder/foto-gallery.twig
@@ -5,7 +5,7 @@
 				{% if item.groot %}
 					<div class="col-12" data-aos="fade-up">
 						{% if item.type == 'video' %}
-							<div class="video-container {% if item.schaduw %} with-shadow {% endif %}">
+							<div class="video-container mb-5 {% if item.schaduw %} with-shadow {% endif %}">
 								{{ item.video }}
 							</div>
 						{% else %}
@@ -15,7 +15,7 @@
 				{% else %}
 					<div class="col-md-6" data-aos="fade-up">
 						{% if item.type == 'video' %}
-							<div class="video-container {% if item.schaduw %} with-shadow {% endif %}">
+							<div class="video-container mb-5 {% if item.schaduw %} with-shadow {% endif %}">
 								{{ item.video }}
 							</div>
 						{% else %}
