--- a/templates/pagebuilder/referenties.twig
+++ b/templates/pagebuilder/referenties.twig
@@ -1,4 +1,4 @@
-<section id="section{{ sectionno }} mod-referenties bg-{{ item.achtergrond }}">
+<section id="section{{ sectionno }}" class="mod-referenties bg-{{ item.achtergrond }}">
 	<div class="container">
 		{% include 'pagebuilder/parts/content.twig' %}
 		<br>
