--- a/templates/pagebuilder/foto-full.twig
+++ b/templates/pagebuilder/foto-full.twig
@@ -1,3 +1,3 @@
 <section class="section{{ sectionno }} mod-foto bg-standaard full">
-	<img src="{{ Image(item.afbeelding).src|resize(1920) }})" srcset="{{ Image(item.afbeelding).srcset }}" alt="{{ Image(item.afbeelding).alt }})" data-aos="fade-in">
+	<img src="{{ Image(item.afbeelding).src }}" srcset="{{ Image(item.afbeelding).srcset }}" alt="{{ Image(item.afbeelding).alt }})" data-aos="fade-in">
 </section>
