--- a/templates/archive-werk.twig
+++ b/templates/archive-werk.twig
@@ -73,7 +73,7 @@
 					</div>
 				</div>		
 				{% if current_category != '' %}
-					<a href="{{ site.url }}/werk" class="btn btn-tag"> {{ title }} <span style="margin-left: 10px"><i class="fas fa-times"></i></span></a>
+					<a href="{{ site.url }}{% if lang == 'en' %}/work{% else %}/werk{% endif %}" class="btn btn-tag"> {{ title }} <span style="margin-left: 10px"><i class="fas fa-times"></i></span></a>
 				{% endif %}
 			</div>
 		</section>
