--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -38,6 +38,7 @@ Text Domain: myproject
 @import 'common/prevnext';
 @import 'common/single';
 @import 'common/buttons'; 
+@import 'common/cookieplugin';
 @import 'common/section';
 @import 'common/cards';
 @import 'common/tooltip';
