--- a/assets/scss/common/_base.scss
+++ b/assets/scss/common/_base.scss
@@ -201,7 +201,7 @@ ol {
 
 ol li {
     counter-increment: a;
-    margin-bottom: 10px;
+    margin-bottom: 0;
     position: relative
 }
 
@@ -272,6 +272,9 @@ p {
 			  border-radius: 10px;
 		  }
 	  }
+    ul {
+      margin-bottom: 0;
+    }
 	}
 }
 
