--- a/templates/archive-werk.twig
+++ b/templates/archive-werk.twig
@@ -72,7 +72,7 @@
 						</div>
 					</div>
 				</div>		
-				{% if current_category != '' %}
+				{% if current_category != '0' %}
 					<a href="{{ site.url }}{% if lang == 'en' %}/work{% else %}/werk{% endif %}" class="btn btn-tag"> {{ title }} <span style="margin-left: 10px"><i class="fas fa-times"></i></span></a>
 				{% endif %}
 			</div>
