--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -72,6 +72,7 @@ Text Domain: myproject
 @import 'modules/mailchimp';
 @import 'modules/gbcontent';
 @import 'modules/calltoaction';
+@import 'modules/review';
 @import 'modules/logoslider';
 @import 'modules/breadcrumbs';
 @import 'modules/biglink';
