--- a/templates/html-header.twig
+++ b/templates/html-header.twig
@@ -50,6 +50,9 @@
 	<script>
 	  gtag('event', 'conversion', {'send_to': 'AW-939901511/H8z6CI7W6sgBEMeEl8AD'});
 	</script>
+	
+	<script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
+
 
 
   {{function('wp_head')}}
