--- a/templates/html-header.twig
+++ b/templates/html-header.twig
@@ -25,27 +25,8 @@
   <link rel="mask-icon" href="{{ theme.link }}/safari-pinned-tab.svg" color="#00acff">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
-	  
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-1853948-1"></script>
-	<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
-	
-	gtag('config', 'UA-1853948-1');
-	</script>
-	
-	<!-- Global site tag (gtag.js) - Google Ads: 939901511 -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=AW-939901511"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
-	
-	  gtag('config', 'AW-939901511');
-	</script>
-	
+  <meta name="msvalidate.01" content="70DA6AC8EABE901C2D3F92FA966F11D2" />
+		
 	<!-- Event snippet for Paginaweergave conversion page -->
 	<script>
 	  gtag('event', 'conversion', {'send_to': 'AW-939901511/H8z6CI7W6sgBEMeEl8AD'});
