--- a/assets/scss/gutenberg/_link.scss
+++ b/assets/scss/gutenberg/_link.scss
@@ -1,4 +1,18 @@
 .mod-link {
+	background: $lightblue;
+	padding: 25px 25px 0;
+	border-radius: 20px 0 20px 0;
+	min-height: 104px;
+	p {
+		margin: 0;
+	}
+	img {
+		margin: 0;
+	}
+}
 
-
+.mod-content {
+	.mod-link {
+		margin-top: 30px;
+	}
 }
