--- a/assets/scss/common/_base.scss
+++ b/assets/scss/common/_base.scss
@@ -46,6 +46,13 @@ figcaption {
 		}
 	}
 }
+
+.last-element-mb-0 {
+    > * {
+        margin-bottom: 0 !important; 
+    } 
+}
+
 input[type=text],
 input[type=email],
 input[type=user],
