--- a/assets/css/gutenberg.css
+++ b/assets/css/gutenberg.css
@@ -76,7 +76,7 @@
 
 .mod-link {
   background: #E4F7FF;
-  padding: 25px 25px 0;
+  padding: 25px;
   border-radius: 20px 0 20px 0;
   min-height: 104px;
 }
