--- a/assets/scss/common/_tease.scss
+++ b/assets/scss/common/_tease.scss
@@ -7,7 +7,11 @@
 	}
 }
 
-
+.tease-prijsblokken {
+	&:hover {
+		box-shadow: 0 30px 60px 0 rgba(0,0,0,0.60);
+	}
+}
 .tease.tease-review {
 	display: block;
 	.card {
