--- a/assets/scss/gutenberg/_link.scss
+++ b/assets/scss/gutenberg/_link.scss
@@ -1,6 +1,6 @@
 .mod-link {
 	background: $lightblue;
-	padding: 25px 25px 0;
+	padding: 25px;
 	border-radius: 20px 0 20px 0;
 	min-height: 104px;
 	p {
