--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -77,6 +77,7 @@ Text Domain: myproject
 @import 'modules/breadcrumbs';
 @import 'modules/biglink';
 @import 'modules/projecten-uitgelicht';
+@import 'modules/prijsblokken';
 
 @import 'plugins/slick';
 @import 'plugins/wpml';
