--- a/templates/pagebuilder.twig
+++ b/templates/pagebuilder.twig
@@ -41,6 +41,9 @@
 	{% elseif item.acf_fc_layout == 'pageheader' %}
 		{% include 'pagebuilder/pageheader.twig' %}
 	
+	{% elseif item.acf_fc_layout == 'prijsblokken' %}
+		{% include 'pagebuilder/prijsblokken.twig' %}
+	
 	{% elseif item.acf_fc_layout == 'reviews' %}
 		{% include 'pagebuilder/reviews.twig' %}
 	
